Add PowerShell scripts for managing Terraform and Hetzner DNS

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,8 +1,8 @@
 [defaults]
 inventory = inventory.ini
 host_key_checking = False
-remote_user = root
-private_key_file = ../terraform/n8n_key
+remote_user = telemaco
+private_key_file = ~/.ssh/n8n-server
 interpreter_python = auto_silent
 
 [privilege_escalation]
