--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,3 +1,4 @@
 [n8n_servers]
-# This IP will be replaced by the user or script after Terraform apply
-x.x.x.x ansible_user=root
+# lab1 (Hetzner)
+# Point lab1.telemaco.com.mx to Terraform output (prefer floating_ip), or set ansible_host explicitly.
+lab1.telemaco.com.mx ansible_user=telemaco
